changed wording in index.html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <p>I wish I could let my work speak for me at this point, but I am not quite there yet. So for now my personality will do the heavy lifting. </p>
       <p>In a few months that won't be the case anymore. Then this page will be brimming with projects and personality in equal amounts. And I can introduce myself as a full-stack web developer (to be)</p>
 <!-- add link later //-->
-      <div class="center"><a href="work.html" class="button">Check out some code of mine</a></div>
+      <div class="center"><a href="work.html" class="button">Check out some projects of mine</a></div>
     </main>
     <footer class="page-footer">
       <p>Find me on</p>
