Changed title and h1

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Julie Junge web developer portfolio</title>
+    <title>About Julie Junge</title>
     <link rel="shortcut icon" href="img/faviconjjdark.png" alt="">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -39,7 +39,7 @@
       </nav>
     </header>
     <main>
-      <h1>About</h1>
+      <h1>About me</h1>
 <!-- not a professional text at all, so have a look at it later //-->
       <p>Coming from a background in archaeology, art and theatre, Julie Junge will now take on projects with a background in the real world. This might prove a hopeless endeavour, as her creativity and escapist phantasy will stream into everything she <span id="phantasy">touches</span>. </p>
       <p> Get in touch if you are looking for a web developer that never grew up and can't help thinking out of the box. I know it from a safe source, that she will be delighted. </p>
