--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Julie Junge web developer portfolio</title>
+    <title>Contact Julie Junge</title>
     <link rel="shortcut icon" href="img/faviconjjdark.png" alt="">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -39,7 +39,7 @@
       </nav>
     </header>
     <main>
-      <h1>Contact</h1>
+      <h1>Contact me</h1>
 
 <!-- I don't feel comfortable sharing a private adress and contact details apart from email, so I will leave the general infos for now and remove it later //-->
       <div class="center">
@@ -53,7 +53,7 @@
         Tel <a href="tel:+491234567">+49 1234567</a><br>
         Skype <a href="skype:hello.careerfoundry"> hello.careerfoundry</a><br>
 
-<!-- add pic with emailmail later
+        add pic with emailmail later
         <img src="http://via.placeholder.com/150x50" alt="junge.julie at web.de">
         <a href="mailto:junge.julie@web.de">email</a> //-->
       </div>
