--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
 
 
     </main>
-    <form action="" method="post" id="contact-form">
+    <form action="#" method="post" id="contact-form">
       <label class="standard-label" for="contact-email">E-mail: </label>
       <input type="email" id="contact-email" required>
 
