removed the totally checker

--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
       <h1>Contact me</h1>
 
 <!-- I don't feel comfortable sharing a private adress and contact details apart from email, so I will leave the general infos for now and remove it later //-->
-  
+
 
 <!--    CareerFoundry GmbH<br>
         Köpenicker Str. 126<br>
@@ -74,8 +74,9 @@
 
       <input type="submit" value="Send message">
     </form>
-<!--  tota11y is added here //-->
+<!--  tota11y is added here
     <script src="js/tota11y.min.js"></script>
+//-->
     <footer class="page-footer">
       <p>Find me on</p>
 <!-- add link later //-->
