changed wording for labels

--- a/contact.html
+++ b/contact.html
@@ -63,13 +63,13 @@
 
     </main>
     <form action="#" method="post" id="contact-form">
-      <label class="standard-label" for="contact-email">E-mail: </label>
+      <label class="standard-label email" for="contact-email">E-mail</label>
       <input type="email" id="contact-email" required>
 
-      <label class="standard-label" for="phone">Telephone: </label>
+      <label class="standard-label" for="phone">Telephone</label>
       <input type="tel" id="phone">
 <!-- input pattern="\d{3}[\-]\d{3}[\-]\d{4}" won't make sense here -->
-      <label class="standard-label" for="textarea">Message: </label>
+      <label class="standard-label" for="textarea">Message</label>
       <textarea maxlength="240" id="textarea" required></textarea>
 
       <input type="submit" value="Send message">
