added .textarea-length notice

--- a/contact.html
+++ b/contact.html
@@ -74,6 +74,7 @@
 
       <input type="submit" value="Send message">
     </form>
+    <p class="textarea-length">*maximum length 240 signs</p>
 <!--  tota11y is added here
     <script src="js/tota11y.min.js"></script>
 //-->
