--- a/work.html
+++ b/work.html
@@ -43,9 +43,10 @@
       <!-- Grid items will live here -->
 
         <div class="grid__item">
-          <h2>project 1</h2>
-          <p>This project isn't quite there yet.</p>
-          <a href="#">project data on github</a>
+          <h2>meet App</h2>
+          <p>This app shows you events worldwide for web developers everywhere.</p>
+          <a href="https://github.com/julieprograms/meetApp">project data on github</a>
+          <a href="https://julieprograms.github.io/meetApp/">check it out!</a>
         </div>
         <div class="grid__item">
           <h2>project 1</h2>
@@ -53,9 +54,10 @@
           <a href="#">project data on github</a>
         </div>
         <div class="grid__item">
-          <h2>project 1</h2>
-          <p>This project isn't quite there yet.</p>
-          <a href="#">project data on github</a>
+          <h2>Pokedex Api</h2>
+          <p>A Pokedex with all generation 1 pokemon</p>
+          <a href="https://github.com/julieprograms/Pokedex-app">project data on github</a>
+          <a href="https://julieprograms.github.io/Pokedex-app/">check it out!</a>
         </div>
         <div class="grid__item">
           <h2>project 1</h2>
