added information and changed styling

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
       <h1>About me</h1>
 <!-- not a professional text at all, so have a look at it later //-->
       <p>Coming from a background in archaeology, art and theatre, Julie Junge will now take on projects with a background in the real world. This might prove a hopeless endeavour, as her creativity and escapist phantasy will stream into everything she <span id="phantasy">touches</span>. </p>
-      <p> Get in touch if you are looking for a web developer that never grew up and can't help thinking out of the box. I know it from a safe source, that she will be delighted. </p>
+      <p> Get in touch if you are looking for a web developer that never grew up and can't help thinking out of the box. </p>
 
 <!-- I will take a look at the table later, as I don't know what to put into it at the moment... //-->
       <table>
@@ -81,7 +81,7 @@
       <br>
         <div class="center">
 
-        <a href="files/amazake.pdf" class="button" download>download my cv</a>
+        <a href="" class="button" download>download my cv</a>
         </div>
 
 <!-- this is an animation that needs changing later!!! //-->
