--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Zen+Antique+Soft&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@500&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 <!--change to style.production.css once done!!! //-->
   </head>
 
@@ -26,9 +26,7 @@
           <li role="presentation">
             <a href="index.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Home</a>
           </li>
-          <li role="presentation">
-            <a href="about.html" role="menuitem" class="navigation-list__item navigation-list__item--active">About</a>
-          </li>
+          
           <li role="presentation">
             <a href="contact.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Contact</a>
           </li>
@@ -40,44 +38,28 @@
     </header>
     <main>
       <h1>Contact me</h1>
-
-<!-- I don't feel comfortable sharing a private adress and contact details apart from email, so I will leave the general infos for now and remove it later //-->
-
-
-<!--    CareerFoundry GmbH<br>
-        Köpenicker Str. 126<br>
-        10179 Berlin<br>
-        Deutschland<br>
-        <br>
-
-        Tel <a href="tel:+491234567">+49 1234567</a><br>
-        Skype <a href="skype:hello.careerfoundry"> hello.careerfoundry</a><br>
-
-        add pic with emailmail later
-        <img src="http://via.placeholder.com/150x50" alt="junge.julie at web.de">
-        <a href="mailto:junge.julie@web.de">email</a> //-->
-
+<p>Email:<details>junge.julie@web.de</details></p>
 
 
 
 
     </main>
-    <form action="#" method="post" id="contact-form">
+<!--    <form action="#" method="post" id="contact-form">
       <label class="standard-label email" for="contact-email">E-mail</label>
       <input type="email" id="contact-email" required>
 
       <label class="standard-label" for="phone">Telephone</label>
       <input type="tel" id="phone">
-<!-- input pattern="\d{3}[\-]\d{3}[\-]\d{4}" won't make sense here -->
+ input pattern="\d{3}[\-]\d{3}[\-]\d{4}" won't make sense here 
       <label class="standard-label" for="textarea">Message</label>
       <textarea maxlength="240" id="textarea" required></textarea>
 
       <input type="submit" value="Send message">
     </form>
     <p class="textarea-length">*maximum length 240 signs</p>
-<!--  tota11y is added here
+  tota11y is added here
     <script src="js/tota11y.min.js"></script>
-//-->
+-->
     <footer class="page-footer">
       <p>Find me on</p>
 <!-- add link later //-->
