--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <section id="about">
   <div class="about">
       <img class="profile__portrait" src="img/photoJulieJunge.png" alt="photo of Julie Junge smiling inmidst a forest">
-     <h2>about</h2>
+     <h1 class="about">about</h1>
       <p>Coming from a background in archaeology, art and theatre, Julie Junge will now take on projects with a background in the real world. </p>
       <p> Get in touch if you are looking for a full-stack web developer that never grew up and can't help thinking out of the box. </p>
 <br>
