added tech skills

--- a/index.html
+++ b/index.html
@@ -39,22 +39,39 @@
       </nav>
     </header>
     <main class="profile">
+
+
+
 <section id="hero">
   <h1 class="moin">moin moin!</h1>
-  <h3>looking for a full-stack web developer?</h3>
-</section>
-
+  <h3 class="moinmoin">looking for a full-stack web developer?</h3>
+<a href="#contact" class="button">contact me</a></section>
 
 
 <section id="about">
   <div class="about">
       <img class="profile__portrait" src="img/photoJulieJunge.png" alt="photo of Julie Junge smiling inmidst a forest">
      <h1 class="about">about</h1>
-      <p>Coming from a background in archaeology, art and theatre, Julie Junge will now take on projects with a background in the real world. </p>
-      <p> Get in touch if you are looking for a full-stack web developer that never grew up and can't help thinking out of the box. </p>
-<br>
-<!-- add link later //-->
-      <div ><a href="#contact" class="button">contact me</a></div>
+      <p>Coming from a background in archaeology, art and theatre, <span class="white">Julie Junge</span> will now take on projects with a background in the real world. </p>
+      <p> Get in touch if you are looking for a <span class="white">full-stack web developer</span> that never grew up and can't help thinking out of the box. </p>
+</div>
+<section id="tech-stack">
+  <div class="about">
+  <h1 class="skills">skills</h1>
+  <p>HTML, CSS/SCSS, JavaScript, Node, Express, React, React Native, Angular, Angular Materials, MongoDB, Postgres, Typo3, Jest, Postman, Bootstrap, GitHub</p>
+</div></section>
+
+<!--<div class="technologies">
+  <p>I currently work with</p>
+  <div class="icons">
+    <img class="icon" src="img/html5-brands.svg" alt="Html"></img>
+    <img class="icon" src="img/css3-brands.svg" alt="CSS"></img>
+    <img class="icon" src="img/node-js-brands.svg" alt="Node.js"></img>
+    <img class="icon" src="img/react-brands.svg" alt="React"></img>
+    <img class="icon" src="img/angular-brands.svg" alt="Angular"></img>
+</div></div>
+ add link later //-->
+      <div >
     </div></section>
     
       <section id="projects">
