changed about me text

--- a/about.html
+++ b/about.html
@@ -41,9 +41,12 @@
     <main>
       <h1>About me</h1>
 <!-- not a professional text at all, so have a look at it later //-->
-      <p>Coming from a background in archaeology, art and theatre, Julie Junge will now take on projects with a background in the real world. This might prove a hopeless endeavour, as her creativity and escapist phantasy will stream into everything she <span id="phantasy">touches</span>. </p>
-      <p> Get in touch if you are looking for a web developer that never grew up and can't help thinking out of the box. </p>
-
+      <p>Coming from a background in archaeology, art and theatre, Julie Junge now takes on projects with a background in the real world.</p>
+      <p> Julie Junge is a web developer with a background in archaeology, art and theatre that never stopped dreaming and can't help thinking outside the box. </p>
+<p>Determined web developer with 6 years of theatre and film experience in collaborative project work in diverse and interdisciplinary teams. 
+  As an empathetic team leader, I support my team through active listening and constructive feedback.
+  With my competence in explaining complicated issues in a simple way, I am particularly client-oriented and implement the clients' wishes as quickly as possible.
+  Full of commitment to innovative, sustainable and structured process optimisation, I champion the interests of all stakeholders.</p>
 <!-- I will take a look at the table later, as I don't know what to put into it at the moment... //-->
       <table>
         <thead>
