--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           </div>
   
            <div class="grid__item">
-            <img src="img/watchIt.png" alt="screenshot of the project" class="project-img">
+            <img src="img/reactmovieapp.JPG" alt="screenshot of the project" class="project-img">
             <h2>watchIt-client (React)</h2>
             <p>A React front end for the watchIt movie app that allows users to view information about movies, directors and genres for a selection of classic films. Users are able to create a profile and log in and add movies to their watchlist, among other CRUD functions.</p>
             <p>react, react-bootstrap & css, react-redux</p>
