--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     <section id="contact">
       <h1 class="white">Contact</h1>
 <p class="white contact">
-  <br>Email<br>
+  <br><br>Email<br>
   <a href="mailto:junge.julie@web.de" class="white contact">junge.julie@web.de</a> <br>
   
 <br>
