--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <section id="tech-stack">
       <h1 class="skills">skills</h1>
-      <p class="skillset">HTML, CSS/SCSS, JavaScript, Node, Express, React, React Native, Angular, Angular Materials, MongoDB, Postgres, Typo3, Jest, Postman, Bootstrap, GitHub</p>
+      <p class="skillset">HTML, CSS/SCSS, JavaScript, Node, Express, React, React Native, Angular, Angular Materials, MongoDB, Postgres, Typescript, Jest, Postman, Bootstrap, GitHub</p>
     </section>
     </div>
   </div>
